ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Proj_Full_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Proj_Full_Year_Revenue__c</fullName>
    <description>Projected full year revenue for the opportunity</description>
    <formula>Full_Year_Volume__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated. Values in US Dollar.</inlineHelpText>
    <label>Proj. FY Revenue</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>