ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Brief description of the project (Max 1000 characters, 5 lines)</description>
    <label>Project Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>