ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Application Development</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Product Improvement</fullName>
            </value>
            <value>
                <fullName>New Application</fullName>
            </value>
            <value>
                <fullName>Reintroduction</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Custom Synthesis</fullName>
                <isActive>false</isActive>
                <label>Custom Synthesis</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Manufacturing</label>
            </value>
            <value>
                <fullName>New Technology</fullName>
                <isActive>false</isActive>
                <label>New Technology</label>
            </value>
            <value>
                <fullName>Process Improvement</fullName>
                <isActive>false</isActive>
                <label>Process Improvement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>