ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Projected_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Projected_Opportunity_Amount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>