ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Count__c</fullName>
    <label>Quote Count</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>