ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/RD__c.field-meta.xml
<CustomField>
    <fullName>RD__c</fullName>
    <inlineHelpText>RD Lead</inlineHelpText>
    <label>RD</label>
    <length>2</length>
    <type>Text</type>
</CustomField>