ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/RD_LAb__c.field-meta.xml
<CustomField>
    <fullName>RD_LAb__c</fullName>
    <label>RD Lab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Evans City</fullName>
            </value>
            <value>
                <fullName>Newburyport</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>