ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/RD_Project__c.field-meta.xml
<CustomField>
    <fullName>RD_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RD Project</label>
    <referenceTo>RD_Portfolio__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>