ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/RD_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>RD_Project_Number__c</fullName>
    <label>RD Project Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>