ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
                <isActive>false</isActive>
                <label>SA</label>
            </value>
            <value>
                <fullName>SEA</fullName>
                <isActive>false</isActive>
                <label>SEA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>