ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Synergy__c.field-meta.xml
<CustomField>
    <fullName>Synergy__c</fullName>
    <label>Synergy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Cross Selling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>