ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Target_Launch__c.field-meta.xml
<CustomField>
    <fullName>Target_Launch__c</fullName>
    <description>Expected date of first commercial sale. Not sample or pilot quantities.</description>
    <inlineHelpText>Commercial Launch Date</inlineHelpText>
    <label>GATE 6 Date</label>
    <type>Date</type>
</CustomField>