ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Technical_Lead__c.field-meta.xml
<CustomField>
    <fullName>Technical_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>