ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Top_Project__c.field-meta.xml
<CustomField>
    <fullName>Top_Project__c</fullName>
    <label>Top Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>