ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Whale__c.field-meta.xml
<CustomField>
    <fullName>Whale__c</fullName>
    <inlineHelpText>Is this project a whale? &gt;$10M of revenue per year at greater than average company margins.</inlineHelpText>
    <label>Whale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>