ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/X100_current_year__c.field-meta.xml
<CustomField>
    <fullName>X100_current_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>100% Current Year</label>
    <type>Checkbox</type>
</CustomField>