ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/X2028_Revenue_K__c.field-meta.xml
<CustomField>
    <fullName>X2028_Revenue_K__c</fullName>
    <label>2028 Revenue ($K)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>