ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/X2030_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2030_Revenue__c</fullName>
    <label>2030 Revenue ($K)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>