ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/zCurrent_Year_Revenue_Pot__c.field-meta.xml
<CustomField>
    <fullName>zCurrent_Year_Revenue_Pot__c</fullName>
    <description>Inactive</description>
    <inlineHelpText>Inactive</inlineHelpText>
    <label>zCurrent Year Revenue Pot.</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>