ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/zCurrent_Year_Volume_2__c.field-meta.xml
<CustomField>
    <fullName>zCurrent_Year_Volume_2__c</fullName>
    <description>Inactive</description>
    <formula>IF( AND (YEAR( TODAY())= YEAR(CloseDate),  Probability &gt;0), (((12.5)- MONTH(CloseDate))/12)* Full_Year_Volume__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated. Values in KG</inlineHelpText>
    <label>zCurrent Year Volume</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>