ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/recordTypes/R_D_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>R_D_Portfolio</fullName>
    <active>true</active>
    <businessProcess>R %26 D Portfolio</businessProcess>
    <label>R &amp; D Portfolio</label>
</RecordType>