ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Sales</label>
</RecordType>