ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/validationRules/Only_Admin_Allowed_To_Update_RD_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_Allowed_To_Update_RD_Stage</fullName>
    <active>true</active>
    <description>Only Project Admin is permitted to update Stage on an Opportunity of recordType &apos;R &amp; D Portfolio&apos;</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;R_D_Portfolio&quot;,
NOT($Permission.RD_Project_Manager_Permissions),
ISCHANGED(StageName)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You do not have permission to update the Stage on R &amp; D Portfolio Opportunities.</errorMessage>
</ValidationRule>