ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/Americas_Blitz_Review.listView-meta.xml
<ListView>
    <fullName>Americas_Blitz_Review</fullName>
    <columns>Opportunity_ID__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Proj_Full_Year_Revenue__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Product_Family__c</columns>
    <columns>Plan_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Qualified,Development,Best Few</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Americas</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>2/28/2025</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>notEqual</operation>
        <value>Auto-generated Opportunity</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024</value>
    </filters>
    <label>Americas Blitz Review</label>
</ListView>