ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/Analytical_Projects_Active_v1.listView-meta.xml
<ListView>
    <fullName>Analytical_Projects_Active_v1</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Platform__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Next_Gate_Review__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Commercial_Lead__c</columns>
    <columns>Lead_Chemist__c</columns>
    <columns>X2025_Revenue_K__c</columns>
    <columns>Project_NPV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.R_D_Portfolio</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Active,On-Hold</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Analytical Development</value>
    </filters>
    <label>Analytical Projects (Active)</label>
</ListView>