ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/Craig_Hughes_Opportunities.listView-meta.xml
<ListView>
    <fullName>Craig_Hughes_Opportunities</fullName>
    <booleanFilter>1 OR 2 OR 3 or 4</booleanFilter>
    <columns>Opportunity_ID__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Campaign__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Current_Year_Volume__c</columns>
    <columns>Full_Year_Volume__c</columns>
    <columns>Proj_Full_Year_Revenue__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Region__c</columns>
    <columns>Industry_Segment__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>chugh</value>
    </filters>
    <filters>
        <field>NBD_Lead__c</field>
        <operation>contains</operation>
        <value>Hughes</value>
    </filters>
    <filters>
        <field>Industry_Segment__c</field>
        <operation>equals</operation>
        <value>Electronics</value>
    </filters>
    <filters>
        <field>Market_Segment__c</field>
        <operation>equals</operation>
        <value>Electronics</value>
    </filters>
    <label>Craig Hughes Opportunities</label>
</ListView>