ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/Evans_RD_Active_v1.listView-meta.xml
<ListView>
    <fullName>Evans_RD_Active_v1</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Platform__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Project_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Next_Gate_Review__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Commercial_Lead__c</columns>
    <columns>Lead_Chemist__c</columns>
    <columns>X2025_Revenue_K__c</columns>
    <columns>Project_NPV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.R_D_Portfolio</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RD_LAb__c</field>
        <operation>equals</operation>
        <value>Cambridge,Evans City</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Stage 5 - Launch</value>
    </filters>
    <label>Evans City RD (Active)</label>
</ListView>