ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/Gigi_Opportunities.listView-meta.xml
<ListView>
    <fullName>Gigi_Opportunities</fullName>
    <columns>Opportunity_ID__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Campaign__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Current_Year_Volume__c</columns>
    <columns>Full_Year_Volume__c</columns>
    <columns>Proj_Full_Year_Revenue__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Region__c</columns>
    <columns>Industry_Segment__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>gbasc</value>
    </filters>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>Ethanol</value>
    </filters>
    <label>Gigi Opportunities</label>
</ListView>