ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/India_Business_Development.listView-meta.xml
<ListView>
    <fullName>India_Business_Development</fullName>
    <booleanFilter>(1 OR 5) AND 2 AND 3 AND 4</booleanFilter>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Proj_Full_Year_Revenue__c</columns>
    <columns>Full_Year_Volume__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>rrege</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Lost,Closed Won</value>
    </filters>
    <filters>
        <field>Industry_Segment__c</field>
        <operation>notEqual</operation>
        <value>Pulp &amp; Paper</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>3/31/2020</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>dmaji</value>
    </filters>
    <label>India Business Development</label>
</ListView>