ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/Intermediates_RD_Active_v1.listView-meta.xml
<ListView>
    <fullName>Intermediates_RD_Active_v1</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Project_Status__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Commercial_Lead__c</columns>
    <columns>Lead_Chemist__c</columns>
    <columns>Project_NPV__c</columns>
    <columns>X2025_Revenue_K__c</columns>
    <columns>X2026_Revenue_K__c</columns>
    <columns>X2027_Revenue_K__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.R_D_Portfolio</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Active,On-Hold</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Spec. Intermediates</value>
    </filters>
    <label>Intermediates RD (Active)</label>
</ListView>