ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Plan_Status__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Current_Year_Revenue__c</columns>
    <columns>Proj_Full_Year_Revenue__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Universe,Qualified,Development,Best Few</value>
    </filters>
    <label>My Opportunities</label>
</ListView>